[gd_scene load_steps=14 format=3 uid="uid://cbhr1psi0hd28"]

[ext_resource type="Script" uid="uid://bs3fof36mcr7o" path="res://scripts/ui.gd" id="1_ua6yw"]
[ext_resource type="FontFile" uid="uid://banv5vqltqwu7" path="res://assets/fonts/medieval-pixel.otf" id="2_75u2n"]
[ext_resource type="Texture2D" uid="uid://bxmjx265oa2s" path="res://Abyss of oblivion assets workshop/2026_01_25_0ja_Kleki(1).png" id="3_aputy"]
[ext_resource type="Texture2D" uid="uid://cuay1uort4ae4" path="res://assets/sprites/health_stamina_bar.png" id="3_w7enk"]
[ext_resource type="Texture2D" uid="uid://curncghbuethc" path="res://assets/sprites/health_bar.png" id="4_aputy"]
[ext_resource type="Texture2D" uid="uid://civbi2vjcu38n" path="res://assets/sprites/stamina_bar.png" id="5_7paak"]
[ext_resource type="Texture2D" uid="uid://b622qughmm5ig" path="res://Abyss of oblivion assets workshop/KOIN.png" id="5_75u2n"]
[ext_resource type="Texture2D" uid="uid://brbrw8em6536q" path="res://Abyss of oblivion assets workshop/2025_12_18_0q9_Kleki.png" id="6_3wlde"]
[ext_resource type="Texture2D" uid="uid://nvo5h5vbl1vk" path="res://Abyss of oblivion assets workshop/noise (1).png" id="7_ukj8e"]
[ext_resource type="Texture2D" uid="uid://cuvfye6r6y0o3" path="res://Abyss of oblivion assets workshop/noise (2).png" id="8_w7enk"]
[ext_resource type="Texture2D" uid="uid://ck6c2pxc4tpo1" path="res://assets/sprites/UI/shield_hit.png" id="11_aputy"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_75u2n"]
noise_type = 0
frequency = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_3wlde"]
width = 1152
height = 628
noise = SubResource("FastNoiseLite_75u2n")

[node name="UI" type="Control"]
z_index = 4
layout_mode = 3
anchor_right = 0.167
anchor_bottom = 0.167
offset_right = -0.384018
offset_bottom = -0.216003
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ua6yw")

[node name="rest menu" type="Control" parent="."]
anchors_preset = 0
offset_left = 178.0
offset_top = 51.0
offset_right = 178.0
offset_bottom = 51.0

[node name="HBoxContainer" type="VBoxContainer" parent="rest menu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -51.0
offset_right = 14.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="quit_button" type="Button" parent="rest menu/HBoxContainer"]
z_index = 3
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_75u2n")
theme_override_font_sizes/font_size = 16
text = "QUITTER"
flat = true

[node name="a_venir_button" type="Button" parent="rest menu/HBoxContainer"]
z_index = 3
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_75u2n")
theme_override_font_sizes/font_size = 16
text = "A VENIR
"
flat = true

[node name="a_venir_button2" type="Button" parent="rest menu/HBoxContainer"]
visible = false
z_index = 3
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_75u2n")
theme_override_font_sizes/font_size = 16
text = "A VENIR
"
flat = true

[node name="a_venir_button3" type="Button" parent="rest menu/HBoxContainer"]
visible = false
z_index = 3
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_75u2n")
theme_override_font_sizes/font_size = 16
text = "A VENIR
"
flat = true

[node name="rest_vignette" type="Sprite2D" parent="rest menu"]
visible = false
position = Vector2(-82, 3)
texture = ExtResource("3_aputy")

[node name="instruction" type="Label" parent="."]
visible = false
z_index = 3
layout_mode = 0
offset_left = 14.0
offset_top = 85.0
offset_right = 178.0
offset_bottom = 108.0
theme_override_fonts/font = ExtResource("2_75u2n")
theme_override_font_sizes/font_size = 16
text = "ERROR"
horizontal_alignment = 1

[node name="upper_bar" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 191.0
offset_bottom = 22.0
theme_override_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="upper_bar"]
layout_mode = 2

[node name="health_bar" type="TextureProgressBar" parent="upper_bar/VBoxContainer"]
layout_mode = 2
value = 50.0
texture_under = ExtResource("3_w7enk")
texture_progress = ExtResource("4_aputy")

[node name="stamina_bar" type="TextureProgressBar" parent="upper_bar/VBoxContainer"]
layout_mode = 2
value = 100.0
texture_under = ExtResource("3_w7enk")
texture_progress = ExtResource("5_7paak")

[node name="TextureRect" type="TextureRect" parent="upper_bar"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("5_75u2n")
stretch_mode = 2

[node name="coin_counter" type="Label" parent="upper_bar"]
z_index = 3
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_75u2n")
theme_override_font_sizes/font_size = 16
text = "ERR"
horizontal_alignment = 1

[node name="noise_bar" type="TextureProgressBar" parent="upper_bar"]
z_index = 3
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
value = 50.0
texture_under = ExtResource("7_ukj8e")
texture_progress = ExtResource("8_w7enk")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.5, 0.5, 0.5, 1)
self_modulate = Color(1, 1, 1, 0.054902)
z_index = 10
layout_mode = 0
offset_right = 192.0
offset_bottom = 108.0
mouse_filter = 2
texture = SubResource("NoiseTexture2D_3wlde")
expand_mode = 1

[node name="damage_vignette" type="Sprite2D" parent="."]
visible = false
position = Vector2(96, 54)
texture = ExtResource("6_3wlde")

[node name="iframes_vignette" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.78, 0.5148, 0.5148, 0.482353)
position = Vector2(96.0001, 54)
texture = ExtResource("6_3wlde")

[node name="shield_hit_vignette" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.160784)
position = Vector2(96, 54)
texture = ExtResource("11_aputy")

[node name="parry_vignette" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.537255)
position = Vector2(96, 54)
texture = ExtResource("11_aputy")

[connection signal="pressed" from="rest menu/HBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="rest menu/HBoxContainer/a_venir_button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="rest menu/HBoxContainer/a_venir_button2" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="rest menu/HBoxContainer/a_venir_button3" to="." method="_on_load_button_pressed"]
